--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "npm run build && rm -rf docs && mkdir docs && cp -r build/* docs/"
   },
   "browserslist": {
     "production": [
